# RPesto

./: .Rbuildignore  .gitignore  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  cran-comments.md  readme.md
.github/workflows/: rhub.yaml
R/: RPesto.R  classes.R  data.R  extendr-wrappers.R  fit.R  readnewick.R
man/: Phylogeny.Rd  RPesto-package.Rd  beast-parser.Rd  fit_bds.Rd  fit_cbd.Rd  getNodeNum.Rd  primates.Rd  reexports.Rd  rootnode.Rd
src/: Makevars.in  Makevars.win.in  RPesto-win.def  entrypoint.c
src/rust/: Cargo.toml  vendor.sh
src/rust/src/: bayes_factor.rs  branch_probability.rs  branchrates.rs  categories.rs  conditioning.rs  erf.rs  extinction.rs  height.rs  lib.rs  likelihood.rs  marginal_probability.rs  models.rs  number_of_shifts.rs  odesolver.rs  parser.rs  preorder.rs  spline.rs  tip_rates.rs  tree.rs  utils.rs  writenewick.rs
