[package]
name = 'RPesto'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'RPesto'

[dependencies]
extendr-api = '*'
itertools = "0.14.0"
microbench = "0.5.0"
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.11.1"
statrs = "0.18.0"
